--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A Frontend Mentor Newbie Challenge">
     <meta name="robot" content="index, follow">
+    <link rel="icon" href="./images/favicon-32x32.png"/>
     <link rel="stylesheet" href="./style.css" />
     <title>Single Price Grid Component</title>
 </head>
