--- a/index.html
+++ b/index.html
@@ -11,6 +11,36 @@
     <title>Single Price Grid Component</title>
 </head>
 <body>
-    
+    <main class="main-section">
+        <div class="main-heading">
+            <h1>Join our community</h1>
+            <h2>30-day, hassle-free money back guarantee</h2>
+            <p>Gain access to our full library of tutorials along with expert code reviews.</p>
+            <p>Perfect, for any developers who are serious about honing their skills</p>
+        </div>
+        <div class="card-container">
+            <div class="card subscription">
+                <h3>Monthly Subscription</h3>
+                <div class="price">
+                    <span class="amount">$29</span>
+                    <span class="per-month">per month</span>
+                </div>
+                <p>Full access for less than $1 a day.</p>
+                <button>Sign Up</button>
+            </div>
+            <div>
+                <h3>Why Us</h3>
+                <ul>
+                    <li>Tutorial by industry experts</li>
+                    <li>Peer and expert code reviews</li>
+                    <li>Coding exercises</li>
+                    <li>Access to our GitHub repos</li>
+                    <li>Community forum</li>
+                    <li>Flashcard desks</li>
+                    <li>New videos every week</li>
+                </ul>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
