--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta name="description" content="A Frontend Mentor Newbie Challenge">
     <meta name="robot" content="index, follow">
     <link rel="icon" href="./images/favicon-32x32.png"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css" />
     <title>Single Price Grid Component</title>
 </head>
