add media queries for mobile designs

--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
         <div class="card-container">
             <div class="card subscription">
                 <h3>Monthly Subscription</h3>
-                <div class="price">
+                <div class="price left-card">
                     <span class="amount">$29</span>
                     <span class="per-month">per month</span>
                 </div>
                 <p>Full access for less than $1 a day.</p>
                 <button>Sign Up</button>
             </div>
-            <div>
+            <div class="card right-card">
                 <h3>Why Us</h3>
                 <ul>
                     <li>Tutorial by industry experts</li>
